# arkanoid

./: README.md  engine_requirements.md  hello.py  index.html  plan.txt  pyproject.toml  requirements.txt
css/: style.css
js/: ball.js  block.js  collision.js  game.js  game_engine.js  game_renderer.js  paddle.js  utils.js
old/: README.md  index.html
old/js/: ball.js  game.js  paddle.js  utils.js
server/: agent.py  env.py  game_engine.py  main.py
