[project]
name = "arkanoid-ai"
version = "0.1.0"
description = "AI agent learning to play Arkanoid"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.32.1",
    "stable-baselines3==2.4.0",
    "redis==5.2.0",
    "websockets==14.1",
    "numpy==1.26.4",
    "torch==2.5.1",
    "gymnasium==1.0.0",
    "python-dotenv==1.0.1",
    "tqdm==4.67.1",
    "rich==13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.rye]
managed = true
dev-dependencies = []
